# ModelCompression

./: README.md
cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/Classification/: CifarEval.h  Classification.h  MnistEval.cpp
cpp/Interpreter/: IInterpreter.h  SnpeInference.cpp  TfLiteInference.cpp
cpp/MiDaS/: MidasDepthEst.cpp  MidasDepthEst.h
eval/: README.md
eval/cpp/: CMakeLists.txt  DeepLabv3.cpp  DeepLabv3.h  main.cpp
eval/cpp/Classification/: CifarEval.cpp  Classification.cpp  MnistEval.h
eval/cpp/DeepLabv3/: DeepLabv3.cpp  DeepLabv3.h
eval/cpp/Interpreter/: DnnInference.cpp  DnnInference.h  IInterpreter.cpp  IInterpreter.h  SnpeInference.cpp  SnpeInference.h  TfLiteInference.cpp  TfLiteInference.h
eval/cpp/OpenCV/: DnnInference.cpp  DnnInference.h
eval/cpp/SNPE/: SnpeInference.cpp  SnpeInference.h
eval/cpp/TFLite/: TfLiteInference.cpp  TfLiteInference.h
eval/python/: deeplabv3_pascal2012.py  display_seg_map.py
models/: README.md
python/: TfLite_Interpreter.py  convert_to_raw.py  deeplab_dlc_test.py  deeplabv3_pascal2012.py  fp32.tflite
tools/: pb_opt.py  pb_to_tflite.py
